--- a/src/CreatureChaos.html
+++ b/src/CreatureChaos.html
@@ -24,6 +24,7 @@
             <canvas id="grassland" width="1000px" height="600px"></canvas>
         </div>
         <script src="global.js"></script>
+        <script src="waves.js"></script>
         <script src="power.js"></script>
         <script src="player.js"></script>
         <script src="blob.js"></script>
