Wave system animations

--- a/src/CreatureChaos.html
+++ b/src/CreatureChaos.html
@@ -3,6 +3,7 @@
     <head>
         <title>Creature Chaos</title>
         <link rel="icon" href="../res/images/objects/damage_up.png">
+        <link rel="stylesheet" href="ChaosAnim.css">
         <link rel="stylesheet" href="ChaosStyle.css">
     </head>
     <body>
@@ -14,6 +15,10 @@
                     <li class="menuOption">HELP</li>
                     <li class="menuOption" onclick="window.close();">EXIT</li>
                 </ul>
+            </div>
+            <div id="waveBar">
+                <h1 id="waveTitle"></h1>
+                <h3 id="waveDesc"></h3>
             </div>
             <div id="powerBar">
                 <div id="powerTime"></div>
