Ability to play on github page

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>Creature Chaos</title>
-        <link rel="icon" href="../res/images/objects/damage_up.png">
+        <link rel="icon" href="res/images/objects/damage_up.png">
         <link rel="stylesheet" href="ChaosAnim.css">
         <link rel="stylesheet" href="ChaosStyle.css">
     </head>
@@ -28,13 +28,13 @@
             <canvas id="foreground" width="1000px" height="600px"></canvas>
             <canvas id="grassland" width="1000px" height="600px"></canvas>
         </div>
-        <script src="global.js"></script>
-        <script src="waves.js"></script>
-        <script src="power.js"></script>
-        <script src="player.js"></script>
-        <script src="blob.js"></script>
-        <script src="ghost.js"></script>
-        <script src="tree.js"></script>
-        <script src="main.js"></script>
+        <script src="src/global.js"></script>
+        <script src="src/waves.js"></script>
+        <script src="src/power.js"></script>
+        <script src="src/player.js"></script>
+        <script src="src/blob.js"></script>
+        <script src="src/ghost.js"></script>
+        <script src="src/tree.js"></script>
+        <script src="src/main.js"></script>
     </body>
 </html>
