--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <meta charset="utf-8"/>
         <title>Creature Chaos</title>
         <link rel="icon" href="res/images/objects/damage_up.png">
         <link rel="stylesheet" href="ChaosAnim.css">
