Minotaur feels pain
stop hurting him >:(

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
         <script src="src/waves.js"></script>
         <script src="src/power.js"></script>
         <script src="src/player.js"></script>
+        <script src="src/minotaur.js"></script>
         <script src="src/blob.js"></script>
         <script src="src/ghost.js"></script>
         <script src="src/tree.js"></script>
